tests/snapshots/integration_test__log_data@dd2f1941d31b37ec6e08034e24fa29ef-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test3.log:2"
expression: result
info: "node=auditdtest.a1959.org type=SYSCALL msg=audit(1451781471.394:194433): arch=c000003e syscall=13 success=yes exit=0 a0=b a1=7ffd42eb1590 a2=0 a3=8 items=0 ppid=1306 pid=1321 auid=1000 uid=0 gid=0 euid=0 suid=0 fsuid=0 egid=0 sgid=0 fsgid=0 tty=pts0 ses=1 comm=\"bash\" exe=\"/usr/bin/bash\" subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 key=(null)"
---
{
  "record_type": "SYSCALL",
  "timestamp": 1451781471394,
  "id": 194433,
  "node": "auditdtest.a1959.org",
  "fields": {
    "a0": "b",
    "a1": "7ffd42eb1590",
    "a2": "0",
    "a3": "8",
    "arch": "c000003e",
    "auid": 1000,
    "comm": "bash",
    "egid": "root",
    "euid": "root",
    "exe": "/usr/bin/bash",
    "exit": 0,
    "fsgid": "root",
    "fsuid": "root",
    "gid": "root",
    "items": "0",
    "key": "(null)",
    "pid": "1321",
    "ppid": "1306",
    "ses": "1",
    "sgid": "root",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "unconfined_r",
      "type": "unconfined_t",
      "user": "unconfined_u"
    },
    "success": true,
    "suid": "root",
    "syscall": "13",
    "tty": "pts0",
    "uid": "root"
  }
}
