tests/snapshots/integration_test__log_data@e01621cfdb708409d9c343cb95dab07c.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-bpf.log:1"
expression: result
info: "type=BPF msg=audit(1737533267.765:12263987): prog-id=75 op=LOAD"
---
{
  "record_type": "BPF",
  "timestamp": 1737533267765,
  "id": 12263987,
  "fields": {
    "op": "LOAD",
    "prog-id": "75"
  }
}
