tests/snapshots/integration_test__log_data@e01ef444fe5648d7e462fc7085b36667.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/synthetic/perm.log:2"
expression: result
info: "type=AVC msg=audit(1524662933.080:61207): perm=1"
---
{
  "record_type": "AVC",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "perm": [
      "exec"
    ]
  }
}
