tests/snapshots/integration_test__log_data@e0936da24d38f4a9e119675c3851d553.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:12"
expression: result
info: "type=DAEMON_CONFIG msg=audit(1490239800.477:34) config changed, auid=0 pid=1512 subj=system_u:system_r:unconfined_service_t:s0 res=success"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Tag at:  config changed, auid=0 pid=1512 subj=system_u:system_r:unconfined_service_t:s0 res=success"
    }
  }
}
